--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -1,71 +1,66 @@
-.container{
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
-    align-items: center;
-    gap: 5vw 5vw; 
-    
+.container {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  align-items: center;
+  gap: 5vw 5vw;
 }
 .image {
-	position: relative;
-	width: 400px;
-    cursor: pointer;
+  position: relative;
+  width: 400px;
+  cursor: pointer;
 }
-.image:hover{
-	scale: 1.05;
-	transition: all 0.25s  ;
+.image:hover {
+  scale: 1.05;
+  transition: all 0.25s;
 }
 
 .image__img {
-	display: block;
-	width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .image__overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	color: #ffffff;
-	font-family: 'Quicksand', sans-serif;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	opacity: 0;
-	transition: all 0.25s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.25s;
 }
 
-.image__overlay>* {
-	transform: translateY(20px);
-	transition: transform 0.25s;
+.image__overlay > * {
+  transform: translateY(20px);
+  transition: transform 0.25s;
 }
 
 .image__overlay:hover {
-	backdrop-filter: blur(5px);
-	background: rgba(0,0,0,0.6);
-	opacity: 1;
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 1;
 }
 
-.image__overlay:hover>* {
-	transform: translateY(0);
+.image__overlay:hover > * {
+  transform: translateY(0);
 }
 
 .image__title {
-	font-size: 2em;
-	font-weight: bold;
+  font-size: 2em;
+  font-weight: bold;
 }
-
 .image__description {
-	font-size: 1.25em;
-	margin-top: 0.5em;
-	background-color: grey;
-	border: none;
-	
+  font-size: 1.25em;
+  margin-top: 0.5em;
+  background-color: grey;
+  border: none;
 }
-.image__description a{
-	color: rgb(243, 239, 239);
-	
-	
+.image__description a {
+  color: rgb(243, 239, 239);
 }
