--- a/src/Components/experience.css
+++ b/src/Components/experience.css
@@ -1,51 +1,53 @@
-
-.Experience{
-    
-    display: flex;
-    gap: 30px;
-    height: 60vh;
-    width: 100%;
-    justify-content: center;
+.Experience {
+  display: flex;
+  gap: 30px;
+  height: 60vh;
+  width: 100%;
+  justify-content: center;
 }
-.line{
-    
-    width: 1px;
-    height: 60vh;
-    background-color: black;
-   
+.line {
+  width: 1px;
+  height: 60vh;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  gap: 27vh;
 }
-.internships{
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    
+.internships {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
-.internship{
-    height: 20vh;
-    width: 40vw;
-    background-color: rgb(231, 241, 247);
-    transition: all 0.5s;
+.internship {
+  padding: 10px;
+  height: 20vh;
+  width: 40vw;
+  background-color: rgb(231, 241, 247);
+  transition: all 0.5s;
 }
-.internship:hover{
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+.internship:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-.dot1{
-    height: 10px;
-    width: 10px;
-    position: relative;
-    left: 548px;
-    top: 3vh;
-    
-    background-color: rgb(4, 99, 28);
-    border-radius: 50%;
+.dot1 {
+  height: 10px;
+  width: 10px;
+  /* position: relative;
+  left: 548px;
+  top: 3vh; */
+  
+  background-color: rgb(4, 99, 28);
+  border-radius: 50%;
 }
-.dot2{
-    height: 10px;
-    width: 10px;
-    position: relative;
-    left: 548px;
-    top: 27vh;
-    
-    background-color: rgb(8, 112, 43);
-    border-radius: 50%;
+.dot2 {
+  height: 10px;
+  width: 10px;
+  /* position: relative;
+  left: 548px;
+  top: 27vh; */
+  background-color: rgb(8, 112, 43);
+  border-radius: 50%;
 }
