--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   justify-content: center;
   align-items: center;
   gap: 5vw 5vw;
